Fixed overflow problem

--- a/src/Game.css
+++ b/src/Game.css
@@ -1,7 +1,3 @@
-body{
-  overflow-y: hidden;
-}
-
 body,
 .table td {
   background-color: rgb(246, 247, 245);
@@ -23,11 +19,11 @@ h1 {
 
 .grid-item {
   border: solid #0c134f;
-  height: 100px;
+  height: 6.25rem;
 }
 
 .table-scroll {
-  height: 300px;
+  height: 18.75rem;
   overflow-y: auto;
 }
 
@@ -55,3 +51,8 @@ tr.active > td {
   background-color: #fef2f4;
 }
 
+@media only screen and (min-width: 992px) {
+  body {
+    overflow-y: hidden;
+  }
+}
